@@ -1,7 +1,10 @@
 [Desktop Entry]
 _Name=GImageView
 _Comment=Image Viewer
+Categories=GNOME;GTK;Graphics;Viewer;RasterGraphics;2DGraphics;Photography;
+Encoding=UTF-8
 Exec=gimv -wd
-Terminal=0
+Icon=gimv
+MimeType=image/bmp;image/jpeg;image/gif;image/png;image/tiff;image/x-bmp;image/x-ico;image/x-png;image/x-pcx;image/x-tga;image/xpm;image/svg+xml;
+Terminal=false
 Type=Application
-Icon=gimv.png
