@@ -210,7 +210,7 @@ save_thumb (const gchar *filename, const gchar *cache_type,
       if (info)
          gimv_image_saver_set_image_info (saver, info);
       gimv_image_saver_save (saver);
-      gimv_image_saver_unref (saver);
+      g_object_unref (G_OBJECT (saver));
    }
 
    g_free (thumb_file);
